[package]
name = "nbodies"
version = "0.1.0"
authors = ["manuel <manuelcostanzo22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
rayon = "1.4.0"
jemallocator = "*"
fast-floats = "0.1.2"
itertools = "0.9.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "opt1"
path = "src/opt1.rs"

[[bin]]
name = "opt2"
path = "src/opt2.rs"

[[bin]]
name = "opt3"
path = "src/opt3.rs"

[[bin]]
name = "opt4-1"
path = "src/opt4-1.rs"

[[bin]]
name = "opt4-2"
path = "src/opt4-2.rs"

[[bin]]
name = "opt4-3"
path = "src/opt4-3.rs"

[[bin]]
name = "opt5"
path = "src/opt5.rs"

[[bin]]
name = "opt6"
path = "src/opt6.rs"


[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = 'fat'
panic = 'abort'
codegen-units = 1

[profile.bench]
lto = 'fat'
opt-level = 3
codegen-units = 1
